truncation issue for contact has fixed

--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ article .icon{
 #contact
 {
     position: relative;
-    margin-top: 8%;
+    margin-top: 20%;
     display: flex;
     justify-content: center;
     flex-direction: column;
